demos/demo-2/02-dp-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: application
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    role: database 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels: 
      role: database
  template:
    metadata:
      labels:
        role: database
    spec:
      containers:
      - name: database
        image: shekeriev/viz-ag
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
