demos/demo-2/03-dp-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend 
  namespace: application
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    role: backend 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend 
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend 
    spec:
      containers:
      - name: backend 
        image: shekeriev/viz-ag
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
