demos/demo-2/04-dp-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: application
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    role: frontend 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: application
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
    spec:
      containers:
      - name: frontend
        image: shekeriev/viz-ag
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
