demos/demo-2/06-dp-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: client
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    role: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: client
spec:
  replicas: 1
  selector:
    matchLabels:
      role: client
  template:
    metadata:
      labels:
        role: client
    spec:
      containers:
      - name: client
        image: shekeriev/viz-ag
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
