demos/demo-2/np-3-allow-db-from-be.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db-from-be
  namespace: application
spec:
  podSelector:
    matchLabels:
      role: "database"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: "backend"
