demos/demo-2/np-4-allow-be-from-fe.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-be-from-fe
  namespace: application
spec:
  podSelector:
    matchLabels:
      role: "backend"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: "frontend"
