demos/demo-2/np-5-allow-fe-from-cl.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fe-from-cl
  namespace: application
spec:
  podSelector:
    matchLabels:
      role: "frontend"
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          role: "client"
      podSelector:
        matchLabels:
          role: "client"
